- Bug Fix on LecacyImporter
git-svn-id: http://svn.codehaus.org/geoserver/branches/1.7.x_WCS10EMF_ND@10177 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 7abd31242210d3be608fbc9904b7da26a2e7929f